--- a/bookers2-debug/app/views/books/show.html.erb
+++ b/bookers2-debug/app/views/books/show.html.erb
@@ -23,6 +23,28 @@
         <% end %>
         </tr>
       </table>
+      <table>
+        <% @book.post_comments.each do |post_comment| %>
+          <tr>
+            <td>
+              <%= link_to user_path(post_comment.book.user) do %>
+                <%= attachment_image_tag(post_comment.book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
+                <%= post_comment.book.user.name %>
+              <% end %>
+            </td>
+            <td><%= post_comment.book %></td>
+            <% if post_comment.user == current_user %>
+            <td><%= link_to "Destroy", book_path(post_comment.book.id), method: :delete %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </table>
+      <div class="new-comment">
+        <%= form_with(model:[@book, @post_comment], local: true) do |f| %>
+          <%= f.text_area :comment, rows:'5' %>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
