--- a/bookers2-debug/app/views/books/show.html.erb
+++ b/bookers2-debug/app/views/books/show.html.erb
@@ -33,7 +33,8 @@
               <% end %>
             <% end %>
           </td>
-        
+          <td><%= "コメント数：#{@book.post_comments.count}" %></td>
+
         </tr>
       </table>
       <table>
@@ -45,9 +46,9 @@
                 <%= post_comment.book.user.name %>
               <% end %>
             </td>
-            <td><%= post_comment.book %></td>
+            <td><%= post_comment.comment %></td>
             <% if post_comment.user == current_user %>
-            <td><%= link_to "Destroy", book_path(post_comment.book.id), method: :delete %></td>
+            <td><%= link_to "Destroy", book_post_comment_path(post_comment.book, post_comment), class: 'btn-sm btn-danger', method: :delete %></td>
             <% end %>
           </tr>
         <% end %>
