--- a/bookers2-debug/app/views/users/_info.html.erb
+++ b/bookers2-debug/app/views/users/_info.html.erb
@@ -8,8 +8,17 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th>数</th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th>数</th>
+  </tr>
 </table>
 
 <div class='row'>
+  if文？↓
   <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
 </div>
