--- a/bookers2-debug/app/views/books/show.html.erb
+++ b/bookers2-debug/app/views/books/show.html.erb
@@ -52,7 +52,7 @@
             <% end %>
           </tr>
         <% end %>
-      </table>rai
+      </table>
       <div class="new-comment">
         <%= form_with(model:[@book, @post_comment], local: true) do |f| %>
           <%= f.text_area :comment, rows:'3' %>
