--- a/bookers2-debug/app/views/layouts/application.html.erb
+++ b/bookers2-debug/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <%= render 'layouts/form' %>
       <main>
         <p id="notice"><%= notice %></p>
         <%= yield %>
