--- a/bookers2-debug/app/views/books/show.html.erb
+++ b/bookers2-debug/app/views/books/show.html.erb
@@ -22,16 +22,8 @@
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
           <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
         <% end %>
-          <td>
-            <% if  @book.favorited_by?(current_user) %>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %>
-              <% end %>
-            <% else %>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %>
-              <% end %>
-            <% end %>
+          <td id="book_<%= @book.id %>">
+            <%= render 'favorites/favorite-btn', book: @book %>
           </td>
           <td><%= "コメント数：#{@book.post_comments.count}" %></td>
 
@@ -47,9 +39,10 @@
               <% end %>
             </td>
             <td><%= post_comment.comment %></td>
-            <% if post_comment.user == current_user %>
-            <td><%= link_to "Destroy", book_post_comment_path(post_comment.book, post_comment), class: 'btn-sm btn-danger', method: :delete %></td>
-            <% end %>
+            <td>
+              <% if post_comment.user == current_user %>
+                <%= link_to "Destroy", book_post_comment_path(post_comment.book, post_comment), class: 'btn-sm btn-danger', method: :delete, remote: true %></td>
+              <% end %>
           </tr>
         <% end %>
       </table>
