--- a/bookers2-debug/app/views/books/show.html.erb
+++ b/bookers2-debug/app/views/books/show.html.erb
@@ -26,28 +26,14 @@
             <%= render 'favorites/favorite-btn', book: @book %>
           </td>
           <td><%= "コメント数：#{@book.post_comments.count}" %></td>
-
         </tr>
       </table>
-      <table>
-        <% @book.post_comments.each do |post_comment| %>
-          <tr>
-            <td>
-              <%= link_to user_path(post_comment.book.user) do %>
-                <%= attachment_image_tag(post_comment.book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
-                <%= post_comment.book.user.name %>
-              <% end %>
-            </td>
-            <td><%= post_comment.comment %></td>
-            <td>
-              <% if post_comment.user == current_user %>
-                <%= link_to "Destroy", book_post_comment_path(post_comment.book, post_comment), class: 'btn-sm btn-danger', method: :delete, remote: true %></td>
-              <% end %>
-          </tr>
-        <% end %>
+
+      <table class="book-comments">
+        <%= render 'post_comments/index', book: @book %>
       </table>
       <div class="new-comment">
-        <%= form_with(model:[@book, @post_comment], local: true) do |f| %>
+        <%= form_with(model:[@book, @post_comment]) do |f| %>
           <%= f.text_area :comment, rows:'3' %>
           <br><%= f.submit "送信" %>
         <% end %>
