--- a/bookers2-debug/app/views/books/show.html.erb
+++ b/bookers2-debug/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
       <h2>User info</h2>
       <%= render 'users/info', user: @book.user %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: book.new %>
+      <%= render 'form', book: @book_new %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -33,7 +33,7 @@
         <%= render 'post_comments/index', book: @book %>
       </table>
       <div class="new-comment">
-        <%= form_with(model:[@book, @post_comment]) do |f| %>
+        <%= form_with(model:[@book, @post_comment] do |f| %>
           <%= f.text_area :comment, rows:'3' %>
           <br><%= f.submit "送信" %>
         <% end %>
