--- a/bookers2-debug/app/views/devise/registrations/new.html.erb
+++ b/bookers2-debug/app/views/devise/registrations/new.html.erb
@@ -9,25 +9,24 @@
           <%= f.text_field :name, autofocus: true, class: "name" %>
         </div>
         <div class="field">
-          <%= f.label :email %><br />
+          <%= f.label :メールアドレス %><br />
           <%= f.email_field :email, autofocus: true, class: "email" %>
         </div>
         <div class="field">
-          <%= f.label :password %>
+          <%= f.label :パスワード>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <em>(<%= @minimum_password_length %> )</em>
           <% end %><br />
           <%= f.password_field :password, autocomplete: "off", class: "password" %>
         </div>
         <div class="field">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: "password_confirm" %>
+          <%= f.label :password_confirmation %><span><%= f.password_field :password_confirmation, autocomplete: "off", class: "password_confirm" %></span>
         </div>
         <div class="actions">
           <%= f.submit "Sign up" ,class: 'btn btn-sm btn-success' %>
         </div>
       <% end %>
-      <%= render "devise/shared/links" %>
+      <!--<%= render "devise/shared/links" %>-->
     </div>
   </div>
 </div>
