--- a/bookers2-debug/app/views/homes/top.html.erb
+++ b/bookers2-debug/app/views/homes/top.html.erb
@@ -5,6 +5,7 @@
       <p>In  <i class="fas fa-book"></i><strong>Bookers</strong>, </p>
       <p>you can share and exchange  your opinions , inpressions , and emotions</p>
       <p> about various books!</p>
+      <p>ここから始まる物語</p>
       <div class="btn-wrapper col-10 mx-auto">
         <div class="row">
           <%= link_to 'Log in',new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
