--- a/bookers2-debug/app/views/books/show.html.erb
+++ b/bookers2-debug/app/views/books/show.html.erb
@@ -33,7 +33,7 @@
         <%= render 'post_comments/index', book: @book %>
       </table>
       <div class="new-comment">
-        <%= form_with(model:[@book, @post_comment] do |f| %>
+        <%= form_with(model:[@book, @post_comment]) do |f| %>
           <%= f.text_area :comment, rows:'3' %>
           <br><%= f.submit "送信" %>
         <% end %>
